Add bodyguard slap challenge to Kontakt page

--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,8 @@ include:
   - slap.html
   - slap-styles.css
   - slap-script.js
+  - bodyguard-styles.css
+  - bodyguard-script.js
   - avatar.png
 
 # Exclude scraper files but keep assets
